# diffusers-attention-processor-example

./: .gitignore  README.md  main.py  pyproject.toml
my_pipelines/: __init__.py  attention_store_attn_processor_pipeline.py  shape_store_attn_processor_pipeline.py
tests/: attention_store_attn_processor_pipeline_test.py  shape_store_attn_processor_pipeline_test.py
