[tool.poetry]
name = "diffusers-attention-processor-example"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{ include = "my_pipelines" }]

[tool.poetry.dependencies]
python = "^3.10"
diffusers = { extras = ["torch"], version = "^0.29.1" }
transformers = "^4.42.3"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
